<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010-2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">AudioFX</string>

    <!-- ControlPanelMusic strings -->
    <string name="no_effects">Effects not available.</string>
    <string name="main_toggle_effects_title">Audio effects</string>
    <string name="eq_dialog_title">AudioFX</string>
    <string name="headset_plug">Plug in headphones for these effects.</string>
    <string name="bass_boost_strength">Bass boost</string>
    <string name="virtualizer_strength">Surround sound</string>
    <string name="pr_title">Reverb:</string>
    <string name="pr_summary">Additional room reverberation effects</string>
    <string name="pr_dialog_title">Reverb preset</string>
    <string name="setup">Setup</string>

    <string name="normal">Normal</string>
    <string name="classical">Classical</string>
    <string name="dance">Dance</string>
    <string name="flat">Flat</string>
    <string name="folk">Folk</string>
    <string name="heavy_metal">Heavy Metal</string>
    <string name="hip_hop">Hip Hop</string>
    <string name="jazz">Jazz</string>
    <string name="pop">Pop</string>
    <string name="rock">Rock</string>
    <string name="ci_extreme">Electronic</string>
    <string name="user">Custom</string>

    <string name="none">None</string>
    <string name="smallroom">Small room</string>
    <string name="mediumroom">Medium room</string>
    <string name="largeroom">Large room</string>
    <string name="mediumhall">Medium hall</string>
    <string name="largehall">Large hall</string>
    <string name="plate">Plate</string>

    <string name="device_headset">Headset</string>
    <string name="device_speaker">Speaker</string>
    <string name="device_usb">USB</string>
    <string name="device_bluetooth">Bluetooth</string>

    <string name="eq_custom">To customize, select “Custom”</string>
    <string name="power_on_prompt">Press the power button on the top-right.</string>

    <!-- title of control panel picker dialog [CHAR LIMIT=30] -->
    <string name="picker_title">Music effects control panel"</string>
    <string name="reverb">- Reverb -</string>
    <string name="eq_preset">- Equalizer Preset- </string>
</resources>
