<?xml version="1.0" encoding="utf-8" ?>
<!-- Copyright (C) 2010-2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res/org.cyanogenmod.audiofx"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/noEffectsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_effects"
            android:layout_weight="1"
            android:visibility="gone"/>

    <org.cyanogenmod.audiofx.widget.InterceptableLinearLayout
            android:id="@+id/contentSoundEffects"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

        <include
                layout="@layout/equalizer"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="2"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/audiofx_background_color"
                />

        <TextView
                android:id="@+id/eq_preset_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/eq_preset_label_text_color"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="10sp"
                android:background="@color/audiofx_background_color"
                android:text="@string/eq_preset"
                android:textAllCaps="true"/>

        <org.cyanogenmod.audiofx.widget.Gallery
                android:id="@+id/eqPresets"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:background="@color/audiofx_background_color"
                android:gravity="center_vertical"/>


        <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

        <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dip"-->
        <!--android:layout_weight="23">-->

        <!--<com.pheelicks.visualizer.VisualizerView-->
        <!--android:id="@+id/visualizerView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <!--</com.pheelicks.visualizer.VisualizerView>-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_weight="1">-->

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            <Space
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    />

            <org.cyanogenmod.audiofx.widget.Knob
                    android:id="@+id/bBStrengthKnob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    custom:label="@string/bass_boost_strength"
                    custom:foreground="@drawable/knob_large"/>

            <Space
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    />

            <org.cyanogenmod.audiofx.widget.Knob
                    android:id="@+id/vIStrengthKnob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    custom:label="@string/virtualizer_strength"
                    custom:foreground="@drawable/knob_large"/>

            <Space
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    />
        </LinearLayout>


        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/disabled"/>-->

        <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

        <TextView
                android:id="@+id/reverb_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/reverb_label_text_color"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/audiofx_background_color"
                android:paddingTop="8dp"
                android:textSize="10sp"
                android:text="@string/reverb"
                android:textAllCaps="true"/>


        <org.cyanogenmod.audiofx.widget.Gallery
                android:id="@+id/reverb_gallery"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:background="@color/audiofx_background_color"
                android:gravity="center_vertical"/>


        <!--</FrameLayout>-->

    </org.cyanogenmod.audiofx.widget.InterceptableLinearLayout>
</LinearLayout>
